--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
             <section class="work">
 
                     <h2>Marvel Comics Dashboard</h2>
-                    <p>Deloyed application: coming soon...</p>
+                    <p>Deloyed application: <a href="https://sevaggap.github.io/UofT-SCS-Coding-Bootcamp-Project-1-Interactive-Front-End-Application/">https://sevaggap.github.io/UofT-SCS-Coding-Bootcamp-Project-1-Interactive-Front-End-Application/</a></p>
                     <p>Github Repository:<a href="https://github.com/sevaggap/UofT-SCS-Coding-Bootcamp-Project-1-Interactive-Front-End-Application">https://github.com/sevaggap/UofT-SCS-Coding-Bootcamp-Project-1-Interactive-Front-End-Application</a></p>
                 
+                    <img src="assets/images/Website-Screenshot-4-Marvel-Wiki.png"/>
+
                     <h2>Weather Dashboard</h2>
                     <p>Deloyed application: <a href="https://sevaggap.github.io/UofT-SCS-Coding-Bootcamp-Homework-6-Weather-Dashboard/">https://sevaggap.github.io/UofT-SCS-Coding-Bootcamp-Homework-6-Weather-Dashboard/</a></p>
                     <p>Github Repository: <a href="https://github.com/sevaggap/UofT-SCS-Coding-Bootcamp-Homework-6-Weather-Dashboard">https://github.com/sevaggap/UofT-SCS-Coding-Bootcamp-Homework-6-Weather-Dashboard</a></p>
